--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
   </head>
   <body>
     <div class="login-container border-1">
-      hello
+      <div class="border-1 login-header">header</div>
+      <div class="border-1 login-content">content</div>
+      <div class="border-1 login-footer">footer</div>
     </div>
   </body>
 </html>
+      
