--- a/index.html
+++ b/index.html
@@ -6,10 +6,32 @@
   </head>
   <body>
     <div class="login-container border-1">
-      <div class="border-1 login-header">header</div>
-      <div class="border-1 login-content">content</div>
+      <div class="border-1 login-header">
+        <div class="logo">
+          <img src="images/logo.jpg" alt="logo" />
+        </div>
+        <div class="border-1 head-title">
+          <h3>Phoenix</h3>
+          <p>Dillibazar</p>
+        </div>
+      </div>
+      <div class="border-1 login-content">
+        <form>
+          <div class="input-group">
+            <label for="username">Username</label>
+            <input id="username" />
+          </div>
+
+          <div class="input-group">
+            <label for="password">Password</label>
+            <input id="password" type="password">
+          </div>
+
+          <button class="login-button">Login</button>
+          
+        </form>
+      </div>
       <div class="border-1 login-footer">footer</div>
     </div>
   </body>
 </html>
-      
